# python-web-homework-2

./: Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
