[tool.poetry]
name = "python-web-homework-2"
version = "0.1.0"
description = ""
authors = ["Tetiana <tanichka.chirkova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.5.2"
pyreadline3 = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
